# plutus-voting-dapp

./: README.md  hie.yaml  voting-dapp.cabal
nix/: haskell.nix
src/: Offchain.hs  Onchain.hs  Utils.hs
test/: BasicScenarios.hs  Endpoints.hs  MaliciousEndpoints.hs  Tests.hs
